# django-template

./: .gitignore  README.md  pyproject.toml  requirements.txt
project_name/: __init__.py  cry.py  settings.py  urls.py  wsgi.py
project_name/models/: _mixin.py
