[project]
name = "{{project_name}}"
requires-python = ">=3.10"
license = {text = "MIT License"}
dynamic = ["version", "dependencies"]
description = ""
keywords = ["django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
deploy = [
    "uwsgi==2.0.27; os_name == 'posix'",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# exclude = ["local"]
# include = ["{{project_name}}.*", "packages"]
packages = { find = {where = ["."], include=[] }}

[tool.setuptools.dynamic]
version = {attr = "{{project_name}}.__version__"}
dependencies = {file = "requirements.txt"}

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
